components/base/custom.css
#formAdd{
    margin-bottom:40px
}
.input-group-prepend{
    margin-left: -1px;
}
/*.address-billing .panel{
    min-height: 190px;
}
 .address-billing .panel .panel-body{
    overflow-x: scroll;
} */
/* .entities-data tfoot{
    display:block;
} */
.entities-data tfoot th:nth-child(2) input, .entities-data tfoot th:nth-child(3) input{
    display:none;
}

.dl-horizontal dt{
    text-align: left !important;
    min-width:120px !important;
}
.attachment-table table tfoot{
    display: none;
}
.four-boxes{
    margin-bottom: 20px;
}
.four-boxes .panel-header, .entity-form .panel-header{
    background: #333;
    padding-left: 15px;
    color: #fff;
}
.four-boxes .panel, .entity-form .panel{
    margin-top:0;
}
.four-boxes .panel .dl-horizontal{
    display: inline-block;
    
}
.four-boxes .panel .dl-horizontal .border-section, .four-boxes .panel .border-section{
    border-bottom: 1px solid #ccc;
    display: block;
    padding-bottom:0
}
.four-boxes .panel .border-section{
    padding-bottom:15px
}
.four-boxes .panel .dl-horizontal dd{
    line-height:50px
}
dl + dl{
    margin-top: 0px;
}
.attachment{
    display: block;
    width: 100%;
}
.input-group .custom-file{
    margin-top: 7px;
}
.compliance input[type=checkbox]{
    width: auto;
}
.add-contact{
    color: #fff;
    padding-right:20px;
    padding-left: 15px;
    line-height: 46px;
    margin-top: -12px;
}
.add-contact:hover{
    background: #666;
    color: #fff;
}
.client-form span.steric{
    color: red
}
.client-form .compliance{
    margin-top:0
}
.client-form label.custom-file-label{
    border-radius: 4px;
    border:1px solid #ccc
}
.contact-form .errorMsg{
    margin-bottom: 15px;
    color: red;
}
.contact-form label{
    font-size:16px;
    color: #000;
}
.contact-form input[type=text]{
    font-size:14px
}
.preloader{
    position:fixed;
    width:100%;
    height:100%;
    background: rgba(255, 255, 255, .9);
    text-align:center;
    z-index:999;
    display: none;
    
}
.preloader img{
    margin: 25% 0;
}
.servererror, .validaddress{
    display:none;
    font-size: 14px;
}
.validaddress span, .servererror span{
    color:red;
    display: block;
    margin-bottom: 15px;
}
.contact-form label span.require{
    color: red;
}
.note p{
    color: #000;
    font-size: 14px;
}
.successMessage, .editMessage{
    position: fixed;
    top:0;
    left: 0;
    width:100%;
    /* margin:0 auto; */
    z-index: 99;
    text-align: center;
    transition: linear .3s ease-in-out;
    display: none;
}
.successMessage .smessage, .editMessage .semessage{
    background: #6fbb47;
    color:#fff;
    font-size:14px;
    padding:10px 15px;
    border-radius:5px;
    display: inline-block;
}
@media (max-width:768px){
    .four-boxes .panel .border-section{
        margin-bottom:15px
    }
}
@media (max-width:667px){
    .four-boxes .panel .border-section{
        margin-bottom:15px
    }
}
@media (max-width:480px){
    .four-boxes .panel .border-section{
        margin-bottom:15px
    }
}
@media (max-width:320px){
    .four-boxes{
        width: 100%;
    }
    .four-boxes .panel .border-section{
        margin-bottom:10px
    }
}

